 - [ADDED]		Using Fragments instead of ViewFlipper
 - [CHANGED]	MainActivity so as to hold data for fragments
 - [ADDED]		Fragments for Chart and List
 - [ADDED]		List View is now Sorted based on messages sent by each user 
 - [CHANGED]	Circular Progress bar style
 - [REMOVED]	Removed Progressbars from fragments
 - [CHANGED]	Added Progress Dialog in MainActivity 
 - [ADDED]		Added Apache Licence, Version 2.0
 
MessageCounter 2.0.64 [July 2013]
 - [OPTIMIZED]	General Optimizations 
 - [ADDED]		Added license popup
 - [FIXED]		No data shown on orientation change
 - [ADDED]		Added title with count of top message senders for the chart fragment
 - [ADDED]		Added an imporved icon for the launcher
 - [ADDED]		Minor styles for total message count
 - [CHANGED]	Reworded some strings to make it better
 - [REMOVED]	Removed some debug log statements

MessageCounter 2.0.68 [July 2013]
 - [CHANGED]	Change in the way contact info is read from sms table in the library
 - [CHANGED]	Minor optimizations for Chart Display page
 - [FIXED]		Fixed a chart value calculation error
 
MessageCounter 2.0.80 [July 2013]
 - [FIXED]		Project naming in AppStore
 - [FIXED]		Messages from same contact using multiple address was duplicated
 - [CHANGED]	Changed the default contact image to that of the platform
 - [OPTIMIZED]	Optimizations
 
MessageCounter 2.0.84 [July 2013]
 - [ADDED]		Sent message count
 - [OPTIMIZED]	Optimizations
 
MessageCounter 2.0.94 [July 2013]
 - [FIXED]		Fix for Chart Size issues
 - [ADDED]		Text describing Other Senders in Chart Page
 - [ADDED]		Share app added in the menu 
 - [ADDED]		Experimental support for French language
 - [ADDED]		Section Heading styles for section headings
 
MessageCounter 2.0.96 [August 2013]
 - [CHANGED]	Color theme for chart
 - [CHANGED]	Chart starts from 12'O clock position
 - [CHANGED]	Start of Test in chart getting clipped  

 // Cache the data computation between orientation changes