@@ -1,0 +1,33 @@
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" />
+
+<!-- For Tablet support -->
+
+<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="6dip" android:baselineAligned="false">
+
+    <fragment
+        android:id="@+id/list_fragment"
+        android:name="com.ae.apps.messagecounter.fragments.MessageListFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        tools:layout="@android:layout/list_content" />
+
+    <fragment
+        android:id="@+id/chart_fragment"
+        android:name="com.ae.apps.messagecounter.fragments.MessageChartFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        tools:layout="@layout/fragment_chart" />
+
+</LinearLayout> -->
