@@ -4,7 +4,7 @@
     <string name="title_section1">List</string>
     
     <string name="app_name">MessageCounter</string>
-    <string name="app_version">Version 2.0.96 (August 2013)</string>
+    <string name="app_version">Version 2.0.99 (August 2013)</string>
     <string name="app_desc">Message Counter displays the number of messages in your inbox, message counts from your contacts. Source Code at (https://github.com/midhunhk/message-counter)</string>
 	<string name="app_disclaim">Disclaimer: This app is created for educational purposes and as such has no guarantee or support. Since undocumented Android APIs are used, this app may not work as expected on all devices.</string>
 	<string name="app_developer_info">Designed &amp; developed at ae labs</string>
