@@ -28,5 +28,6 @@ public interface AppConstants {
 	 * A colorful set of colors preferably can be usd for a chart
 	 */
 	public static final int[]	CHART_COLORFUL	= { 0xFFB2C938, 0xff3BA9B8, 0xffFF9910, 0xffC74C47, 0xff5B1A69,
-			0xffA83AAE, 0xffF870BD, 0xffFFD302, 0xff7AD1C4, 0xff419DDB };
+			0xffA83AAE, 0xffF870BD, 0xff7AD1C4, 0xff419DDB }; 
+	/* 0xffFFD302, yellow*/
 }
